# ChangeLog for dev-util/tkdiff
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/tkdiff/ChangeLog,v 1.5 2011/12/11 21:30:41 ottxor Exp $

*tkdiff-4.2 (11 Dec 2011)

  11 Dec 2011; Christoph Junghans <ottxor@gentoo.org> +tkdiff-4.2.ebuild:
  Version bump

  06 Aug 2010; Jeremy Olexa <darkside@gentoo.org> tkdiff-4.1.4.ebuild:
  Add ~amd64-linux ~x86-linux, tested by myself

  13 May 2009; Markus Meier <maekke@gentoo.org> tkdiff-4.1.4.ebuild:
  amd64/x86 stable, bug #259833

  12 May 2009; Ferris McCormick <fmccor@gentoo.org> tkdiff-4.1.4.ebuild:
  Sparc stable (again) --- bug #259833 lost keyword.

  12 May 2009; Federico Ferri <mescalinum@gentoo.org>
  +files/tkdiff-4.1.4-hg.patch, +metadata.xml, +tkdiff-4.1.1.ebuild,
  +tkdiff-4.1.3.ebuild, +tkdiff-4.1.4.ebuild:
  moved from category dev-tcltk to dev-util

  12 May 2009; Federico Ferri <mescalinum@gentoo.org> tkdiff-4.1.4.ebuild:
  depend on >=tk-8.4.18-r1, as suggested on bug #259833 comment #6

*tkdiff-4.1.4 (23 Dec 2008)

  23 Dec 2008; Federico Ferri <mescalinum@gentoo.org>
  +files/tkdiff-4.1.4-hg.patch, +tkdiff-4.1.4.ebuild:
  version bump + patch for mercurial, bug #251778 - thanks Ottxor

  27 Apr 2007; Christian Faulhammer <opfer@gentoo.org> tkdiff-4.1.3.ebuild:
  stable amd64, bug 155797

  27 Apr 2007; Joseph Jezak <josejx@gentoo.org> tkdiff-4.1.3.ebuild:
  Marked ppc stable for bug #155797.

  26 Apr 2007; Christian Faulhammer <opfer@gentoo.org> tkdiff-4.1.3.ebuild:
  stable x86, bug 155797

  25 Apr 2007; Ferris McCormick <fmccor@gentoo.org> tkdiff-4.1.3.ebuild:
  sparc stable --- Bug #155797 --- tkdiff has actually been around forever.

*tkdiff-4.1.3 (24 Sep 2006)

  24 Sep 2006; MATSUU Takuto <matsuu@gentoo.org> +tkdiff-4.1.3.ebuild:
  Version bumped.

*tkdiff-4.1.1 (08 Jan 2006)

  08 Jan 2006; MATSUU Takuto <matsuu@gentoo.org> -tkdiff-4.0.2.ebuild,
  +tkdiff-4.1.1.ebuild:
  Version bumped.