@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX tkdiff-4.1.4-hg.patch 6459 RMD160 9a5688c7dcdf3a12ef3f1e8f5b86de933a002fc6 SHA1 55625f8c61c88bb7b0f7b57c988666f27869d685 SHA256 7660b36809bd5df8e3561b602459345a64c04c834fd0236f504f14597ee895d9
 DIST tkdiff-4.1.3-unix.tar.gz 89665 RMD160 717bae3d774ee08647c0378b7108739534180b22 SHA1 5d5bb97c8404d73e41232930bc25728b680f6388 SHA256 5af91ab5490e88a19d6cd63f92cd88cea2f085ac19640751c84067798e6d9291
@@ -8,18 +8,14 @@ DIST tkdiff-4.2.tar.gz 92063 RMD160 96bb5b6ebc004dc5247c0f7fbce4b20816af8024 SHA
 DIST tkdiff_4_1_1.tar.gz 88450 RMD160 99b3f0e13b023415835952ac1f06f1f78edd9b7b SHA1 c3d2f81026ea57dedd10c9afac79619578a28c47 SHA256 95a0c619b91d84b1ff9898b572a08c4cb1c670c950757bdff9a485cd152a690e
 EBUILD tkdiff-4.1.1.ebuild 582 RMD160 c9660e96737ec295d20e2910aeda204c9ae22ca0 SHA1 80f39bc2f273747979d2827bddcd0a5948f58367 SHA256 c3ec81b54d379ed8f9a7ab8dc602f17ea6b3c2ad0eb664a47661f7444ab4e9fd
 EBUILD tkdiff-4.1.3.ebuild 568 RMD160 6fc70790bdc326d959ce78aa10586a76bd3faf19 SHA1 6a22a7447eb2f01323d5ee777951ef7cedfc8b7d SHA256 8458a66b4bbfde3c90fea27c17a65846f9a52a1ff987e35f6cef6708ef785fb7
-EBUILD tkdiff-4.1.4.ebuild 691 RMD160 11e395b9abdf867bae0aa25473f8f3df48bfc550 SHA1 13f3a7330f991a4993c0dc068e14bf5425cda76c SHA256 eefe23bac208389171feeba470f24f1a3b12c53c66c0b6eeb6e540a1773c2ee4
+EBUILD tkdiff-4.1.4.ebuild 685 RMD160 7fa0fea14d81e7084b3dc37db497b25ea4346860 SHA1 998c4f2b80bcc917e36f73c24ce815181d2f11c0 SHA256 c73c391f0ca4ffc9a43d2790cc346e275ea352e541ad79bd666312339a577123
 EBUILD tkdiff-4.2.ebuild 596 RMD160 322154b29d43602267678214ec68a6df6336fda2 SHA1 aa6c98c272237f8cd8727c32bb81e9f39f0d89aa SHA256 2e05c542d74f120999e18afc91caf3c1ffa3bad02e6dfe6c48b7312b56a7d8da
-MISC ChangeLog 2229 RMD160 86e3823767757ea5ebc5fbbc06e91ae40d48a937 SHA1 3669c8dd173ea167ff7ee01df500274859b34022 SHA256 7da3d3a06cb155f1ec87f3dfd7562dd2b618ed1b6feec2b324336c37d491a362
+MISC ChangeLog 2320 RMD160 7d41d3ce1be10e0d4f4cbaed121391760b20e151 SHA1 8a25d7aae7ea5f6578b5a9e1eb4169b1776291c2 SHA256 1ec5f5989281a074c81b538cb5f9dfdce82fd8504e593faef11085b66faf6553
 MISC metadata.xml 158 RMD160 f197c34c7dd71f6025e93436e3f999137928554a SHA1 edb8e5ac668440e92e947fc3dff54484b28c7775 SHA256 62fb2b0a899315973de885234e3931a2f652b343b68f90fe0778378fdca6f290
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBAgAGBQJO5SEHAAoJEOeBhlrCAAWGAg0H+wYOPKtqLciozW1fAuoXMQlX
-z/uNf2DzAWBScULgBLlBm8xDHi9Tbmp2DBIicXQFoiL3z64fbGYuFph2LL5K6rii
-Yqn6FIApVb+igpX0TeyzcQUHN0SytVuvmmnXTeSWbnLAKPlo3psWBOGNDuKykDJE
-i/gZrP6xyyPWr3k2dOf+hPv8XH4W86NKIYXE5FQZvPAZHWzoiceoNLhuf71AOfsI
-AU+QmVwE4bZuzw2ciRhJKX225hq7nNKxYpotFhVG1vBeMKo7mRZeYNspId+8kjvz
-90KDYIawCM2MXmS6jSYGMvYf6So/BXP4CXyya/Hwwzs7+1Fa8M64JVdrlGBKQyU=
-=RRaq
+iF4EAREIAAYFAk7xcXcACgkQknrdDGLu8JDMDwD/YkqPFXKtXWsJ+CUZOREfeUOd
+KdHRnwYt5rBPtICVfA8A/jOhd9I2b7E8/h7325MCt8lCritezJ29NnouXoIdv2Is
+=oUaX
 -----END PGP SIGNATURE-----
