@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/tkdiff/tkdiff-4.1.4.ebuild,v 1.4 2010/08/06 22:09:45 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/tkdiff/tkdiff-4.1.4.ebuild,v 1.5 2011/12/21 05:41:03 xmw Exp $
 
 inherit eutils
 
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/tkdiff/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~ppc sparc x86 ~amd64-linux ~x86-linux"
+KEYWORDS="amd64 ppc sparc x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
 RDEPEND=">=dev-lang/tk-8.4.18-r1"
