@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/tkdiff
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/tkdiff/ChangeLog,v 1.5 2011/12/11 21:30:41 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/tkdiff/ChangeLog,v 1.6 2011/12/21 05:41:03 xmw Exp $
+
+  21 Dec 2011; Michael Weber <xmw@gentoo.org> tkdiff-4.1.4.ebuild:
+  ppc stable (bug 259833)
 
 *tkdiff-4.2 (11 Dec 2011)
 
